--- a/hackathon.html
+++ b/hackathon.html
@@ -8,9 +8,10 @@ permalink: /hackathon/
 
  {% include about-hackathon.html %}
 
- {% include judges.html %}
-
- {% include prizes.html %}
+ {% comment %}
+  {% include judges.html %}
+  {% include prizes.html %}
+ {% endcomment %}
  
  {% include hackathon-location.html %}
  
