--- a/logistics.html
+++ b/logistics.html
@@ -1,11 +1,9 @@
 ---
 layout: default
-title: Get ready to DevFest
+title: Se prepare para o DevFest
 permalink: /logistics/
 ---
 
  {% include top-section.html %}
 
  {% include find-way.html %}
-
- {% include direction-details.html %}
